# magpie

./: .clang-format  .gitignore  AUTHORS  COPYING  Makefile.am  NEWS  README.md  autogen.sh  configure.ac
build-aux/: format-xml.sh  git-version.sh
data/: Makefile.am  org.gnome.Magpie.desktop.in  org.gnome.Magpie.gresource.xml  org.gnome.Mail.desktop.in  org.gnome.Mail.gresource.xml  org.gnome.Spool.desktop.in  org.gnome.Spool.gresource.xml
data/ui/: compose-window.ui  style.css  window.ui
src/: Makefile.am  mail-about.c  mail-about.h  mail-account-page.c  mail-account-page.h  mail-account.c  mail-account.h  mail-application.c  mail-application.h  mail-arena.c  mail-arena.h  mail-backend-imap.c  mail-backend-imap.h  mail-backend-msgraph.c  mail-backend-msgraph.h  mail-backend-store.c  mail-backend-store.h  mail-backend.c  mail-backend.h  mail-compose-window.c  mail-compose-window.h  mail-eta.c  mail-eta.h  mail-html-to-text.c  mail-html-to-text.h  mail-imap-id.c  mail-imap-id.h  mail-imap-retry.c  mail-imap-retry.h  mail-maildir-watcher.c  mail-maildir-watcher.h  mail-message-list.c  mail-message-list.h  mail-message-view.c  mail-message-view.h  mail-mime.c  mail-mime.h  mail-outbox.c  mail-outbox.h  mail-progress-ring.c  (+16 more)
tests/: Makefile.am  mail-backend-fake.c  mail-backend-fake.h  test-about.c  test-account-page.c  test-accounts.c  test-arena.c  test-backend-contract.c  test-backend-store.c  test-compose-window.c  test-eta.c  test-html-to-text.c  test-imap-id.c  test-imap-retry.c  test-maildir-watcher.c  test-message-list.c  test-message-view.c  test-mime.c  test-outbox.c  test-quote.c  test-sidebar.c  test-store.c  test-sync.c  test-window.c
